syntax = "proto3";

package pb;

option go_package = "github.com/zvash/accounting-system/pb";

import "user.proto";

message ChangePasswordRequest {
  string username = 1;
  string password = 2;
  string password_confirmation = 3;
}

message ChangePasswordResponse {
  User user = 1;
}