syntax = "proto3";

package pb;

option go_package = "github.com/zvash/accounting-system/pb";

import "user.proto";

message CreateUserRequest {
  string username = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  string password_confirmation = 5;
}

message CreateUserResponse {
  User user = 1;
}