syntax = "proto3";

package pb;

option go_package = "github.com/zvash/accounting-system/pb";

import "google/protobuf/timestamp.proto";

message User {
  string username = 1;
  string name = 2;
  string email = 3;
  google.protobuf.Timestamp password_changed_at = 4;
  google.protobuf.Timestamp create_at = 5;
}